Master to dist (#1168)
* Merge branch 'master' of https://github.com/ConsenSys/tessera into master_to_dist

inital merge builds but test failures and Factory initialisation needs addressing

* Passes all with exception of config migration and vault tests